--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
     sdk: flutter
   get: ^3.24.0
   bottom_navy_bar: ^5.6.0
+  path: ^1.6.4
+  path_provider_ex: ^1.0.1
+  flutter_file_manager: ^0.2.0
+  permission_handler: ^5.1.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
