--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   path_provider_ex: ^1.0.1
   flutter_file_manager: ^0.2.0
   permission_handler: ^5.1.0+2
-
+  audioplayers: ^0.16.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
